Ajustes no pom para garantir que o sistema compile